@@ -50,6 +50,8 @@ typedef struct
 	char *friendly;
 	char *sha1d;
 	char *sha1c;
+	char *url;
+	char *url1;
 } MsnObject;
 
 /**
@@ -155,6 +157,20 @@ void msn_object_set_sha1c(MsnObject *obj, const char *sha1c);
 void msn_object_set_image(MsnObject *obj, PurpleStoredImage *img);
 
 /**
+ * Sets the url field in a MsnObject.
+ *
+ * @param url The url value.
+ */
+void msn_object_set_url(MsnObject *obj, const char *url);
+
+/**
+ * Sets the url1 field in a MsnObject.
+ *
+ * @param url1 The url1 value.
+ */
+void msn_object_set_url1(MsnObject *obj, const char *url);
+
+/**
  * Returns a MsnObject's creator value.
  *
  * @param obj The object.
@@ -234,6 +250,24 @@ const char *msn_object_get_sha1(const MsnObject *obj);
  * @return The associated image.
  */
 PurpleStoredImage *msn_object_get_image(const MsnObject *obj);
+
+/**
+ * Returns a MsnObject's url value.
+ *
+ * @param obj The object.
+ *
+ * @return The url value.
+ */
+const char *msn_object_get_url(const MsnObject *obj);
+
+/**
+ * Returns a MsnObject's url1 value.
+ *
+ * @param obj The object.
+ *
+ * @return The url1 value.
+ */
+const char *msn_object_get_url1(const MsnObject *obj);
 
 void msn_object_set_local(MsnObject *obj);
 
